feat(#9) :: applicatoin,domain service 수정